--- a/src/eni/seis/theme/theme-east/src/less/pages/indicators_search.less
+++ b/src/eni/seis/theme/theme-east/src/less/pages/indicators_search.less
@@ -65,6 +65,7 @@ body.section-indicators.subsection-indicators-search {
 
       div#faceted-results {
         margin-top: 10px;
+        padding-left: 75px;
 
         div.tileContent {
           h2.tileHeadline a {
@@ -72,6 +73,7 @@ body.section-indicators.subsection-indicators-search {
             font-weight: 500;
             position: relative;
             top: 2px;
+            left: -75px;
           }
         }
 
@@ -87,6 +89,8 @@ body.section-indicators.subsection-indicators-search {
               min-width: 55px !important;
               max-width: 55px !important;
               height: auto !important;
+              position: relative;
+              left: -75px;
             }
           }
         }
